Sat Mar  7 12:44:10 1998  Stephan Kulow  <coolo@kde.org>

	* kkfmoptdlg.cpp: removed the delete statements completly.
	the parent (tabdlg) already deletes them

	* root.cpp: added a decodeURL for the desktop entries

Thu Mar  5 21:32:33 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* several fixes and improvements. Moved a lot of constants to 
	  config-kfm.h 
	* removed the old CHANGES file and replaced it with this standard 
	  format ChangeLog file. Please use emacs/xemacs Meta-x add-change-log-entry
	  to add entries to this log file. Thanks.

03/05/98 Bernd
  - saves the kfmgui sizes on 'save settings'
  - colors of the treeview are now in sync with the colors 
    of the html widget

03/05/98 Bernd
  - configurable root grid sizes
  - fixed up the config/dekstop file. This file was not updated to 
    deal with the new grid root scheme -- no wonder that we got
    complains about the icons not being visible on first start up.


03/04/98 Bernd
  - Introduced a bunch of configuration options: Colors, Fonts, Link Cursor
  - I love it! :-)
  - Stephan please have a look at around line 70 in kkfmoptdlg.cpp
    I had to comment out two delete statements and can't say I understand
    precicely why.
  - several configuration dialogs


18.02.98 Stephan
  - I moved the decoding of path() into KURL and fixed some things concerning
    decoding/encoding.
    Note: I think, kfm still doesn't handle the whole URL issue good enough,
    but to change this, would mean to replace the const char* arguments with
    KURL arguments, I guess


16.02.98 Torben
 - Fixed bug in icon arrangement ( icons should not disappear any more ).
 - Moved unix domain sockets tp /tmp
 - Runs "touch" on the sockets every hour to keep /tmp cleaner daemons away
   from our sockets.
 - Keyboard support: Cursor keys move among the icons ( IconView only ).
                     Space selects/deselects icon
                     Return opens document/directory