@@ -1,3 +1,7 @@
+Sun Mar  8 13:23:00 1998  Jacek Konieczny  <jajcus@zeus.polsl.gliwice.pl>
+
+	* Added charset mime type parameter support.
+
 Sat Mar  7 12:44:10 1998  Stephan Kulow  <coolo@kde.org>
 
 	* kkfmoptdlg.cpp: removed the delete statements completly.
